Fix: `NavigationWrapper` text alignment regression

--- a/src/modules/pages/components/NavigationWrapper/NavigationWrapper.css
+++ b/src/modules/pages/components/NavigationWrapper/NavigationWrapper.css
@@ -26,7 +26,6 @@
   order: 2;
   flex-grow: 1;
   align-self: center;
-  text-align: right;
 }
 
 .content {
